Slightly clarify the inactive popup message.

--- a/popup.html
+++ b/popup.html
@@ -36,6 +36,6 @@
   </head>
   <body>
     <h1>Zoom Block Inactive</h1>
-    <p>Zooming cannot be disabled on the current page. Some browsers prevent extensions from modifying browser settings pages or extension store pages.</p>
+    <p>Zooming cannot be disabled on the current page. Some browsers prevent extensions from modifying internal browser pages or extension store pages.</p>
   </body>
 </html>
